--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 	top: 0;
 	left: 0;
 	right: 0;
-	z-index: 1000;
+	z-index: 100;
 }
 
 .header-btn {
@@ -72,9 +72,8 @@
 	flex: 1;
 	display: flex;
 	flex-direction: column;
-  min-height: 0;
+	min-height: 0;
 }
-
 
 #chart {
 	flex: 1 1 0; /* 允许等比例伸缩 */
@@ -87,6 +86,108 @@
 	width: 25%;
 	height: 95vh;
 }
-.watchlist-header {
+.watchlist-title {
 	display: flex;
+}
+.watchlist-list {
+	display: flex;
+	flex: 1;
+	cursor: pointer;
+}
+.watchlist-list-item {
+	flex: 1;
+	text-align: center;
+	white-space: nowrap;
+}
+.watchlist-list-item:hover {
+	background-color: #cccccc;
+}
+
+/* 图表设置 */
+.drag-window {
+	position: absolute;
+	height: 400px;
+	width: 320px;
+	background-color: red;
+	border-radius: 10px;
+	color: white;
+	z-index: 150;
+	top: 0px;
+	left: 0px;
+	display: flex;
+	flex-direction: column;
+	overflow: hidden;
+}
+.window-header {
+	padding: 12px;
+	font-size: 20px;
+}
+.close {
+	color: #ffffff;
+	float: right;
+	font-weight: bold;
+	cursor: pointer;
+}
+.window-content {
+	flex: 1 1 0;
+	display: flex;
+	min-height: 0;
+}
+
+.window-content-left {
+	width: 20%;
+	display: flex;
+	flex-direction: column;
+}
+
+.window-content-right {
+	width: 80%;
+	display: flex;
+	flex-direction: column;
+}
+.window-content-right div,
+.window-content-left div {
+	padding: 8px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.window-table-wrapper {
+	flex: 1;
+	overflow-y: auto;
+}
+.window-table {
+	width: 100%;
+	border-collapse: collapse;
+	box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+
+	table-layout: fixed;
+}
+.window-table-wrapper::-webkit-scrollbar {
+	display: none;
+}
+
+.window-table th,
+.window-table td {
+	padding: 4px;
+	text-align: center;
+	border-bottom: 1px solid #ddd;
+	width: 25%;
+}
+
+th {
+	background-color: #333;
+	color: white;
+	position: sticky;
+	top: 0;
+	z-index: 1;
+}
+
+tr:hover {
+	background-color: #f5f5f5;
+}
+
+input {
+	width: 100%;
+	box-sizing: border-box;
 }
